<resources>
    <string name="facebook_app_id">1584198245207052</string>
    <string name="app_name">TeachMe.Now</string>
    <string name="admin_home_title">Admin: %1$s</string>
    <string name="content_management_title">Content management</string>
    <string name="edit_domain_link">Edit domain</string>
    <string name="show_mission_ladders_link">Edit courses</string>
    <string name="show_practicas_link">Edit events</string>
    <string name="student_management_title">Student management</string>
    <string name="student_roster_link">Student roster</string>
    <string name="stats_link">Mission stats</string>
    <string name="feedback_link">Mission feedback</string>
    <string name="other_title">Other</string>
    <string name="backup_link">Backup</string>
    <string name="loaner_devices_link">Loaner devices</string>
    <string name="show_mission_ladders_title">Course listing</string>
    <string name="mission_ladder_hint">Help:\nYou probably want to have a main course. In the case of a new driver learning to drive, the main course would take the student from the first ignition turn to the DMV driving exam.\n\nYou might want to offer advanced courses like off road driving and basic DIY mechanics. You might also want to offer a course with optional content, like practice drills.\n\nYou\'ll group missions into levels for conceptual organization and to provide frequent learning accomplishments. 8-12 missions per level is roughly what fits on an average phone screen.\n\nExample:\n- Course: Learn to drive\n-- Level 1: Parking lot warmup\n--- Mission: Starting and stopping\n...\n- Course: Simple DIY mechanics\n- Course: Off-road driving</string>
    <string name="new_mission_ladder_link">Create new course</string>
    <string name="confirm_delete_mission_ladder_message">Do you want to delete the course: %1$s?</string>
    <string name="edit_mission_ladder_title">Course: %1$s</string>
    <string name="mission_trees_label">Levels</string>
    <string name="new_mission_tree_link">Create a new level</string>
    <string name="mission_tree_label">Level %1$d: %2$s</string>
    <string name="confirm_delete_mission_tree_message">Do you want to delete the level: %1$s?</string>
    <string name="edit_mission_tree_title">Level: %1$s</string>
    <string name="boss_mission_label">Boss mission: </string>
    <string name="mission_tree_hint">Help:\nBoss mission: The boss mission is the final mission that will unlock the next level.\n\nLearning path: Each mission can have a prerequisite mission. You can chain missions to create a learning path. Example: Mission A -> mission B -> boss mission.\n\nStudent choice: Try to offer students a choice. A mission can depend on more than one prerequisite. Students can choose the order in which they complete the missions.\n\nBonus missions: Feel free to throw in some bonus missions. If the mission isn\'t a prerequisite of another mission, students can choose to do them or not.</string>
    <string name="missions_label">Missions</string>
    <string name="new_mission_link">Create new mission</string>
    <string name="mission_boss_checks_label">Checks</string>
    <string name="edit_mission_boss_title">Mission boss: %1$s</string>
    <string name="confirm_delete_mission_boss_check_message">Do you want to delete the check: %1$s?</string>
    <string name="edit_mission_title">Mission: %1$s</string>
    <string name="basics_tab_title">Basics</string>
    <string name="student_instructions_tab_title">Student instructions</string>
    <string name="buddy_instructions_tab_title">Buddy instructions</string>
    <string name="prerequisites_tab_title">Prerequisites</string>
    <string name="minimum_study_count_label">Min. study count</string>
    <string name="teach_point_cost_label">Teach point cost</string>
    <string name="practice_point_cost_label">Practice point cost</string>
    <string name="heart_point_cost_label">Heart point cost</string>
    <string name="student_youtube_label">Student YouTube</string>
    <string name="buddy_youtube_label">Buddy YouTube</string>
    <string name="import_button_label">Import</string>
    <string name="export_button_label">Export</string>
    <string name="confirm_delete_mission_message">Do you want to delete mission: %1$s?</string>
    <string name="admin_show_practicas_title">Show events</string>
    <string name="create_practica_button_label">Create event</string>
    <string name="student_learning_mission_heading">Courses</string>
    <string name="student_functions_heading">Functions</string>
    <string name="student_profile_label">View profile</string>
    <string name="view_practica_label">View current event</string>
    <string name="logout_button_label">Logout</string>
    <string name="senior_buddy_required_message">As you are teaching this mission for the first time, you need to invite a buddy who has already taught this mission to supervise you.</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="graduate_button_label">Graduate</string>
    <string name="student_help_introduction_heading">Introduction</string>
    <string name="student_help_introduction_text">At the core, the app is a create-your-own-adventure tool that lets you build a curriculum with courses, levels, and missions. It keeps track of learning progress and connects learners to teach each other.\n\nPhilosophically, it is intended to be a counterpart to MOOC (Massive Open Online Courses). Essentially, a MOOC is a learn by yourself with videos and articles. Self-study has strong limitations for topics that require hands-on instruction and/or personal feedback, e.g. dance instruction.\n\nThe actual learning with the app happens between two people, e.g. two Judo learners wrestling on the map. The app facilitates the process by providing a learning pass, tracking progress, and pairing up mentors with learners.</string>
    <string name="student_help_start_learning_heading">How To Get Started Learning</string>
    <string name="student_help_start_learning_text">The first thing you have to do is to meet a mentor or attend a group training. You cannot do this on your own. The mentor or group will advise you on how to pair up with someone. Once you are paired up with a mentor, you can fire up the app.\n\n1. Select the correct domain for the group (e.g. Argentine Tango if you are at a Tango training).\n2. Select the course of choice. Generally, there is a main course that beginners should pick. There may be electives for more advanced students.\n3. You will start at level 1. Any green missions are unlocked and fair game. Select a mission.\n4. The mission will provide you a little description to know what you are getting into.\n5. Select the tab to pair up with your mentor.\n6. Your camera will show up. Aim the camera at the QR code of your mentor\'s phone. (Your mentor can find the QR code by clicking on the three dot options menu in the top right.)\n7. Go ahead and learn.\n8. At the end of the learning mission, your mentor will graduate you in his/her phone.\n9. The next mission(s) will unlock.\n\nOnce you completed a few learning missions, keep your eye on the boss mission. Like in a video game, the boss unlocks the next level.</string>
    <string name="student_help_start_curriculum_heading">How To Get Started Creating Your Own Curriculum</string>
    <string name="student_help_start_curriculum_text">Granted the app currently has little content. We are at the start and am still busy building the app. So, if you stumbled upon this app, you will likely have to build your own curriculum and invited friends, colleagues, clients, or activity partners to learn from you.\n\nYou probably have areas in your life that you are actively learning and/or teaching. You may be a Salsa teacher or a subject matter expert at work. You may want to spread your expertise or put in the love to make it easier others to learn better and faster.\n\n\nThe first step is to re-think your curriculum or way of learning with learning missions. Learning missions are atomic units of learning that last about 15 minutes. Most people will shy away from claiming to be a teacher of anything. Yet, most people will happily share a specific topic.\n\nFor example, ask anyone if they could teach a teenager driving. That\'s a daunting task. Ask anyone if they could teach a teenager how to park in the parking lot or to enter a freeway? People will quickly recall that specific action, feel competent, and are happy to share their expertise.\n\nThe same thing happens with a mission based curriculum. Thinking of everything that needs to be taught, a proper sequence, pitfalls takes a lot of teaching experience. That\'s where you as a subject expert do the heavy lifting of creating the curriculum. Once you have nice atomic missions, people will be happy and competent to teach the specific and limited topic.\n\n\nThe second step is to seed the missions. In the beginning, you are the admin of the domain. You know your missions. The app automatically marks all missions as learned for admins.\n\nAnyone who wants to start learning has to learn from you. The spread of missions is exponential, meaning it starts slowly and then rapidly grows. To better understand the dynamics, listen to this Chinese story. A farmer helped out the Chinese king tremendously. The king wanted to grant the farmer a gift. The farmer asked for something that seemed simple. Take a chessboard. Put a grain of rice on the first field. Put two on the second, four on the third. It seems like the farmer asked for very little. Yet, the power of doubling grows rapidly. The heap or rice would be larger than Mount Everest! So, don\'t get discouraged by the initial effort. Once your missions spread themselves, the growth can be astronomic.</string>
    <string name="student_help_mission_tips_heading">Tips On Writing Missions</string>
    <string name="student_help_mission_tips_text">Try to resist the initial urge to write out a very detailed mission description. Most people don\'t want to read a full page essay and follow it. To return to the example of teaching a teenager driving, telling mentors to change a tire is enough to have them use their prior knowledge to know how to go about it.\n\nMission detail can be useful for easy to forget facts. Maybe, there is a mnemonic or a formula to keep in mind. An FAQ can be useful as well. Learners may ask a lot of questions that surprise the mentor. Being able to quickly look up questions in the FAQ will be helpful. The mentor may only need one sentence to be able to elaborate on the answer.\n\nObserve mentors teaching your missions. What may seem obvious to you from many years of teaching experience may not be obvious to others.</string>
    <string name="create_private_domain_title">Create private domain</string>
    <string name="domain_name_label">Domain name</string>
    <string name="domain_description_label">Domain description</string>
    <string name="create_private_domain_button_label">Create</string>
    <string name="private_domain_hints">How to get started: Once the domain is created, click on the three dot options menu in the top right corner. There will be a new option to go to the admin home. That\'s a content management system where you can create missions and levels.\n\nHow to invite people: An invitation code will be generated. Hand the invitation code to anyone whom you want to join the domain. You can look up the invitation code in the domain section.</string>
    <string name="admin_home_menu_title">Admin home</string>
    <string name="student_home_menu_title">Student home</string>
    <string name="switch_domain_menu_title">Switch domain</string>
    <string name="show_qr_code_menu_title">Show QR code</string>
    <string name="refresh_menu_title">Refresh</string>
    <string name="about_menu_title">About</string>
    <string name="send_log_menu_title">Send log</string>
    <string name="name_form_label">Name</string>
</resources>