<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/showQrCodeMenuItem"
        android:title="@string/show_qr_code_menu_title" />

    <item
        android:id="@+id/adminHomeMenuItem"
        android:title="@string/admin_home_menu_title" />

    <item
        android:id="@+id/studentHomeMenuItem"
        android:title="@string/student_home_menu_title" />

    <item
        android:id="@+id/switchDomainMenuItem"
        android:title="@string/switch_domain_menu_title"/>

    <item
        android:id="@+id/refreshMenuItem"
        android:title="@string/refresh_menu_title" />

    <item
        android:id="@+id/emailLogMenuItem"
        android:title="@string/send_log_menu_title" />

    <item
        android:id="@+id/aboutMenuItem"
        android:title="@string/about_menu_title" />
</menu>