<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.AdminMainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_management_title" />

        <Button
            android:id="@+id/editDomainLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_domain_link" />

        <Button
            android:id="@+id/openMissionLaddersLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_mission_ladders_link" />

        <Button
            android:id="@+id/openPracticasLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_practicas_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/student_management_title" />

        <Button
            android:id="@+id/openStudentRosterLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_roster_link" />

        <Button
            android:id="@+id/statsLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_link" />

        <Button
            android:id="@+id/feedbackLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/other_title" />

        <Button
            android:id="@+id/backupLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_link" />

        <Button
            android:id="@+id/loanerDevicesLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loaner_devices_link" />

    </LinearLayout>
</LinearLayout>
