<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_student_about"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.playposse.peertopeeroxygen.android.student.StudentHelpActivity">

<android.support.v7.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/sectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_introduction_heading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_introduction_text" />

        <TextView
            style="@style/sectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_start_learning_heading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_start_learning_text" />

        <TextView
            style="@style/sectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_start_curriculum_heading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_start_curriculum_text" />

        <TextView
            style="@style/sectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_mission_tips_heading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_help_mission_tips_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>