<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.playposse.peertopeeroxygen.android.student.StudentMainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/missionHeadingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_learning_mission_heading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_functions_heading" />

            <Button
                android:id="@+id/studentProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_profile_label" />

            <Button
                android:id="@+id/viewPracticaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_practica_label"
                android:visibility="gone" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_button_label" />

            <Button
                android:id="@+id/testButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/testTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <GridLayout
                android:layout_width="match_parent" android:columnCount="3"
                android:layout_height="wrap_content">

                <Button android:text="asdf asdf asdf asdf" android:layout_columnWeight="1" android:maxWidth="0dp"/>
                <Button android:layout_columnWeight="1" />
                <Button android:layout_columnWeight="1" />
                <Button android:layout_columnWeight="1" />

            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
