<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.playposse.peertopeeroxygen.android.student.StudentBuddyMissionInvitationFragment">

    <TextView
        android:id="@+id/invitationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/studentPhotoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/missionNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/seniorBuddyRequiredTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senior_buddy_required_message"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_label" />


        <Button
            android:id="@+id/graduateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graduate_button_label" />

    </LinearLayout>
</LinearLayout>
